@@ -1,3 +1,6 @@
+2011-09-30  K Mullen <kmullen@nist.gov>
+	* src/minqa.cpp brought in patch contributed by Ben Bolker. 
+
 2011-07-14  John Nash <nashjc@uottawa.ca>
     
         * man/uobyqa.Rd: corrected output names in documentation. Added msg.
